chore: chosen fixes for z-index and drop position

--- a/content/themes/local-whistler/app/styles/_navigation.scss
+++ b/content/themes/local-whistler/app/styles/_navigation.scss
@@ -5,8 +5,12 @@
 .menu {
   @include shadow;
   position: relative;
-  z-index: 4;
+  z-index: 2;
   border-bottom: 0;
+
+  &:hover {
+    z-index: 4;
+  }
 
   @include breakpoint( $bp5 ) {
     margin-bottom: $baseline*2;
